# Clict

./: .gitignore  README.md  TODO  doesitparse.cast  nohup.out  pyproject.toml  setuptools.sh
src/Clict/: Clict.py  Typedef.py  __init__.py  __main__.py  args.py  main.py  struct.tree  structs.py  typedef.py
src/Clict/ClictBase/: __init__.py  base.py  clict.py  support.py
src/Clict/ClictConfig/: base.py  config.py  types.py
src/Clict/ClictSelf/: __init__.py  base.py  config.py  self.py  support.py
src/Clict/ClictSelf/Structs/: opts.py
src/Clict/Clict_from/: __init__.py  config.py
src/Clict/Clict_to/: config.py
src/Clict/base/: clict.py  self.py  support.py
src/Clict/clictConfig/: config.py  types.py
src/Clict/from_other/: types.py
src/Clict/lib/: fnText.py  fnterm.py  version.py
src/Clict/types/: base.py  datatypes.py  self.py
tests/: remote-fs  terst  test_Clict.py  test_Conf.py  test_fromConf.py
tests/test_folderconfig/: ..teest  100.test.ikkel  100_ikkel
tests/to_config/system/d/cpupower-frequency-set_service/: 00gentoo
tests/to_config/system/d/dhcpd4.service/: dhcpd4.service-customexec
tests/to_config/system/d/dhcrelay4.service.d/: 00gentoo.conf
tests/to_config/system/d/dhcrelay6_service/: 00gentoo
tests/to_config/system/service/: dbus-org_freedesktop_timesync1  display-manager  test.py  virtualhere
tests/to_config/system/system/service/: dbus-org.freedesktop.ratbag1.service  dwagent.service  moneroocean.miner  vmware-networks-server.service  vmware-usbarbitrator.service  vmware-workstation-server.service  vmware.service
(+34 files in other folders)
