[tool.poetry]
name = "clict"
version = "0.2.0"
description = "Python Dict with classlike access to its contents (dot.notation,creates"
authors = ["missing keys on the fly,...)"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


#[build-system]
#requires = ["poetry-core"]
#build-backend = "poetry.core.masonry.api"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
