[project]
name = "Clict"
description = "Python Dict with classlike access to its contents (dot.notation,creates missing keys on the fly,...)"
#authors = ["hoefkens.j"]
#license = ["LICENCE"]
version ='0.3.0'

[tool.poetry.dependencies]
python = "^3.8"


#[build-system]
#requires = ["poetry-core"]
#build-backend = "poetry.core.masonry.api"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

